Spacing fixes

--- a/assets/css/dashboards.scss
+++ b/assets/css/dashboards.scss
@@ -51,3 +51,7 @@ b {
 main {
   margin-bottom: 60px;
 }
+
+.button-research {
+  margin-top: 30px;
+}
